[gd_scene load_steps=64 format=3 uid="uid://bbcmh5nkjdc4m"]

[ext_resource type="Script" uid="uid://fpldjltbxj7g" path="res://Scripts/Minigames/Player/PlayerSoul.gd" id="1_y7kw2"]
[ext_resource type="Texture2D" uid="uid://bpuwmsyc13jkm" path="res://Assets/UI/SpeechBox/SpeechBox.png" id="2_b83y8"]
[ext_resource type="Texture2D" uid="uid://bhjxtbuh0sorj" path="res://Assets/MiniGame/Objects/PlayerSoul/Player_Soul.png" id="2_gf236"]
[ext_resource type="Texture2D" uid="uid://t30uecuqeeb8" path="res://Assets/UI/SpeechBox/SpeechBoxFlipped.png" id="2_oahj8"]
[ext_resource type="PackedScene" uid="uid://b5b55y61ec1q5" path="res://Scenes/Dialogue/Dialogue_Text.tscn" id="3_qjp2v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dtr3s"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymcdw"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsw66"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_54wpr"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgb3s"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ktgi"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwsha"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_15xkm"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1vu2"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ylpk"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymo8x"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7otu6"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uycx2"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_akwk0"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx1sf"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxtfc"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfttb"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hg1m"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqmhy"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_25w6j"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_61y3a"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kmes"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpjy7"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1k16"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6qra"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_umk60"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivy4a"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt10w"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8puij"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_utiqq"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbgor"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wtgr"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3alf1"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_agtcm"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_insuk"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8mrc"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 216, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b83y8"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 216, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjp2v"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 216, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oahj8"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 216, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pnyw"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 216, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l243m"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ixnr"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_krr8o"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtw6m"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhwsa"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjbwe"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf78v"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysi45"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfwdw"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgwi2"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm5t0"]
atlas = ExtResource("2_gf236")
region = Rect2(0, 192, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_unbxw"]
atlas = ExtResource("2_gf236")
region = Rect2(24, 192, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0xhg"]
atlas = ExtResource("2_gf236")
region = Rect2(48, 192, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1dnn"]
atlas = ExtResource("2_gf236")
region = Rect2(72, 192, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysl1x"]
atlas = ExtResource("2_gf236")
region = Rect2(96, 192, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fmd76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtr3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymcdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsw66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54wpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgb3s")
}],
"loop": true,
"name": &"Check_Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ktgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwsha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15xkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1vu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ylpk")
}],
"loop": true,
"name": &"Check_Walk_Left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7otu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uycx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akwk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx1sf")
}],
"loop": true,
"name": &"Check_Walk_Right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxtfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfttb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hg1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqmhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25w6j")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61y3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kmes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpjy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1k16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6qra")
}],
"loop": false,
"name": &"Despawn",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umk60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivy4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt10w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8puij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utiqq")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbgor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wtgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3alf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agtcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_insuk")
}],
"loop": true,
"name": &"Spawn",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8mrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b83y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjp2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oahj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pnyw")
}],
"loop": true,
"name": &"Talk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l243m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ixnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krr8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhwsa")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjbwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf78v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysi45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfwdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgwi2")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm5t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unbxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0xhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1dnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysl1x")
}],
"loop": true,
"name": &"Win",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejx5i"]
size = Vector2(6, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_54qkp"]
radius = 1.0

[node name="PlayerSoul" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_y7kw2")
bottom_box_pos = Vector2(-44, 20)
flipped_box = ExtResource("2_oahj8")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -44.0
offset_top = -44.0
offset_right = -4.0
offset_bottom = -4.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.05
anchor_top = -0.575
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("2_b83y8")
region_rect = Rect2(0, 0, 38, 39)
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 5
patch_margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="DialogueText" parent="Control/NinePatchRect" instance=ExtResource("3_qjp2v")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0731707
anchor_top = 0.0793651
anchor_right = 0.914634
anchor_bottom = 0.888889
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
letter_time = 0.08
space_time = 0.1
punctuation_time = 0.16
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" parent="Control/NinePatchRect/DialogueText" index="0"]
anchors_preset = -1
anchor_right = 0.999275
anchor_bottom = 1.00288
offset_right = 128.05
offset_bottom = 96.85
scale = Vector2(0.35, 0.35)
metadata/_edit_use_anchors_ = true

[node name="Marking" parent="Control/NinePatchRect/DialogueText/HBoxContainer" index="0"]
visible = false

[node name="Text" parent="Control/NinePatchRect/DialogueText/HBoxContainer" index="1"]
theme_override_font_sizes/normal_font_size = 16

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_fmd76")
animation = &"Talk"
autoplay = "Idle"

[node name="Timer2" type="Timer" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_ejx5i")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_mask = 9

[node name="CheckerCircle" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_54qkp")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]

[editable path="Control/NinePatchRect/DialogueText"]
